<resources>
    <string name="app_name">Pop-flake</string>
    <string name="title_home">Home</string>
    <string name="title_search">search</string>
    <string name="title_setting">setting</string>
    <string name="in_theatres">In theatres</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="top_rating">Top picks for you</string>
    <string name="search_title">Search Pop-flake</string>
    <string name="search">search</string>
    <string name="appearance">Appearance</string>
    <string name="app_theme">App Theme</string>
    <string name="top_box_office">Top Box Office</string>

    <string-array name="themes">
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="web_view">Web View</string>
    <string name="enter_name">enter name</string>
    <string name="enter_your_complain">enter your complain</string>
    <string name="submit">submit</string>
    <string name="your_complain">Your Complain</string>
    <string name="complain_form">Complain Form</string>
    <string name="any_complains">any complains?</string>
</resources>